--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=demo
 server.port=8080
+
+spring.profiles.active=loki
+management.endpoints.web.exposure.include=health,info,prometheus,metrics,loggers
